--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -34,13 +34,13 @@
 	<script>
 		WebFont.load({
 			google: {
-				families: [ 'Lato:400,700,400italic:latin', 'Volkhov::latin' ]
+				families: [ 'Outfit:400,700,400italic:latin', 'Nunito::latin' ]
 			}
 		});
 	</script>
 
 	<noscript>
-		<link href='http://fonts.googleapis.com/css?family=Lato:400,700,400italic%7CVolkhov' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Outfit:400,700,400italic%7CNunito' rel='stylesheet' type='text/css'>
 	</noscript>
 
 
