--- a/_sass/_02_settings_typography.scss
+++ b/_sass/_02_settings_typography.scss
@@ -22,7 +22,7 @@ $rem-base: $base-font-size;
 $base-line-height: 1.5 !default;
 
 
-$font-family-sans-serif: "Outfit", "Helvetica Neue", "Nunito", Helvetica, Arial, sans-serif;
+$font-family-sans-serif: "Nunito", Helvetica, Arial, sans-serif;
 $font-family-serif: "Volkhov", Georgia, Times, serif;
 $font-family-monospace: "Lucida Console", Monaco, monospace;
 
