--- a/_sass/_09_elements.scss
+++ b/_sass/_09_elements.scss
@@ -148,3 +148,27 @@ img.lazy {
     transition: opacity 0.7s;
     opacity: 1;
 }
+
+/* Cards
+-----------------------------------------------------------------*/
+.flex-container {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  gap: 10px;
+ }
+ 
+.card {
+  border-radius: 10px;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  margin: 10px;
+}
+
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.container {
+  padding: 2px 16px;
+  text-align: center;
+}
